[package]
edition = "2021"
name = "roguelike-tut-chargrid-2020"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chargrid = "0.4"
chargrid_graphical = "0.7"
coord_2d = "0.3"
direction = "0.18"
rgb24 = "0.3"
entity_table = "0.2"
spatial_table = "0.3"
